[#19] Date & Time Controls: Migrate to Java SE 8 - Sample application added to mulit-module build

--- a/drombler-commons-fx/pom.xml
+++ b/drombler-commons-fx/pom.xml
@@ -68,6 +68,7 @@ Contributor(s): .
         <module>drombler-commons-fx-core</module>
         <module>drombler-commons-fx-time</module>
         <module>drombler-commons-fx-ensemble</module>
+        <module>drombler-commons-fx-sample8</module>
     </modules>
     
     <build>
