--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.drombler.commons</groupId>
     <artifactId>drombler-commons-fx-ensemble-parent</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>pom</packaging>
  
     <name>Drombler Commons - FX - Ensemble - Parent</name>
@@ -22,7 +22,8 @@
         <connection>${scm.parent.connection}</connection>
         <developerConnection>${scm.parent.developerConnection}</developerConnection>
         <url>${scm.parent.url}</url>
-    </scm>
+      <tag>drombler-commons-all-0.2</tag>
+  </scm>
     
     <licenses>
         <license>
