--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
         <relativePath>drombler-commons-parent</relativePath>
     </parent>
     <artifactId>drombler-commons-all</artifactId>
@@ -33,7 +33,8 @@ Contributor(s): .
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-    </scm>
+      <tag>drombler-commons-all-0.2</tag>
+  </scm>
 
     <distributionManagement>
         <site>
