--- a/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.2</version>
+        <version>0.2-SNAPSHOT</version>
         <relativePath>../../drombler-commons-parent</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-parent</artifactId>
@@ -21,8 +21,7 @@
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-      <tag>drombler-commons-all-0.2</tag>
-  </scm>
+    </scm>
     
     <distributionManagement>
         <site>
