--- a/drombler-commons-fx/drombler-commons-fx-sample8/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-sample8/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-fx-parent</artifactId>
         <version>0.2-SNAPSHOT</version>
-        <relativePath>../drombler-commons-fx-parent</relativePath>
+        <relativePath>../drombler-commons-fx-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-sample8</artifactId>
     <packaging>jar</packaging>
