--- a/drombler-commons-fx/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-time/pom.xml
@@ -20,7 +20,7 @@ Contributor(s): .
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-fx-parent</artifactId>
         <version>0.2-SNAPSHOT</version>
-        <relativePath>../drombler-commons-fx-parent</relativePath>
+        <relativePath>../drombler-commons-fx-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-time</artifactId>
     <packaging>bundle</packaging>
