--- a/drombler-commons-security-srp-server/pom.xml
+++ b/drombler-commons-security-srp-server/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
         <version>0.2-SNAPSHOT</version>
-        <relativePath>../drombler-commons-parent</relativePath>
+        <relativePath>../drombler-commons-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>drombler-commons-security-srp-server</artifactId>
