--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ Contributor(s): .
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
         <version>0.2-SNAPSHOT</version>
-        <relativePath>drombler-commons-parent</relativePath>
+        <relativePath>drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-all</artifactId>
     <packaging>pom</packaging>
