--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-application/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-fx-ensemble-parent</artifactId>
-        <version>0.2</version>
+        <version>0.2-SNAPSHOT</version>
         <relativePath>../drombler-commons-fx-ensemble-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-ensemble-application</artifactId>
@@ -16,8 +16,7 @@
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-      <tag>drombler-commons-all-0.2</tag>
-  </scm>
+    </scm>
 
     <distributionManagement>
         <site>
