[#36] Make the Docking Framework usable outside Drombler FX  - initial migration  - initial sample

--- a/drombler-commons-client/pom.xml
+++ b/drombler-commons-client/pom.xml
@@ -9,25 +9,24 @@ http://www.opensource.org/licenses/cddl1.txt
 
 The Original Code is Drombler.org. The Initial Developer of the
 Original Code is Florian Brunner (Sourceforge.net user: puce).
-Copyright 2012 Drombler.org. All Rights Reserved.
+Copyright 2014 Drombler.org. All Rights Reserved.
 
 Contributor(s): .
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.drombler.commons</groupId>
-        <artifactId>drombler-commons-parent</artifactId>
+        <artifactId>drombler-commons-client-parent</artifactId>
         <version>0.3-SNAPSHOT</version>
-        <relativePath>drombler-commons-parent/pom.xml</relativePath>
+        <relativePath>drombler-commons-client-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>drombler-commons-all</artifactId>
+    
+    <artifactId>drombler-commons-client-all</artifactId>
     <packaging>pom</packaging>
 
-    <name>Drombler Commons - All</name>
-    <description>Drombler Commons is a collection of reusable libraries and frameworks.</description>
-    <inceptionYear>2012</inceptionYear>
+    <name>Drombler Commons - Client - All</name>
+    <description>Drombler Commons - Client is a collection of reusable libraries and frameworks for client side development</description>
+    <inceptionYear>2014</inceptionYear>
     
     <scm>
         <connection>${scm.connection}</connection>
@@ -35,13 +34,22 @@ Contributor(s): .
         <url>${scm.url}</url>
         <tag>HEAD</tag>
     </scm>
-
+    
     <distributionManagement>
         <site>
             <id>drombler.sourceforge.net</id>
-            <url>${distributionManagement.parent.url}/</url>
+            <url>${distributionManagement.client.parent.url}/</url>
         </site>
     </distributionManagement>
+
+    <licenses>
+        <license>
+            <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
+            <distribution>repo</distribution>
+            <!--<url>http://java.sun.com/spl.html</url>-->
+            <url>../LICENSE.txt</url>
+        </license>
+    </licenses>
     
     <properties>
         <scm.connection>${scm.parent.connection}</scm.connection>
@@ -49,14 +57,6 @@ Contributor(s): .
         <scm.url>${scm.parent.url}</scm.url>
     </properties>
     
-    <licenses>
-        <license>
-            <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
-            <distribution>repo</distribution>
-            <!--<url>http://java.sun.com/spl.html</url>-->
-            <url>LICENSE.txt</url>
-        </license>
-    </licenses>
 
     <!-- Not inherited!?? -->
     <prerequisites>
@@ -64,11 +64,10 @@ Contributor(s): .
     </prerequisites>
 
     <modules>
-        <module>drombler-commons-parent</module>
-        <module>drombler-commons-context</module>
-        <module>drombler-commons-fx</module>
-        <module>drombler-commons-client</module>
-    </modules>
+        <module>drombler-commons-client-parent</module>
+        <module>drombler-commons-client-core</module>
+        <module>drombler-commons-client-docking</module>
+  </modules>
     
     <build>
         <plugins>
@@ -85,38 +84,19 @@ Contributor(s): .
         <dependencies>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-parent</artifactId>
+                <artifactId>drombler-commons-client-parent</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-context</artifactId>
+                <artifactId>drombler-commons-client-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-client-all</artifactId>
+                <artifactId>drombler-commons-client-docking</artifactId>
                 <version>${project.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-fx-all</artifactId>
-                <version>${project.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
-    <profiles>
-        <profile>
-            <id>all</id>
-            <modules>
-                <module>drombler-commons-security-srp-server</module>
-                <module>drombler-commons-security-srp-client</module>
-            </modules>
-        </profile>
-    </profiles>
 </project>
