--- a/drombler-commons-fx/drombler-commons-fx-core/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-core/pom.xml
@@ -33,8 +33,8 @@ Contributor(s): .
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
     
     <distributionManagement>
         <site>
@@ -149,6 +149,11 @@ Contributor(s): .
         <dependency>
             <groupId>javafx</groupId>
             <artifactId>jfxrt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-client-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.softsmithy.lib</groupId>
