--- a/drombler-commons-fx/pom.xml
+++ b/drombler-commons-fx/pom.xml
@@ -22,7 +22,7 @@ Contributor(s): .
         <version>0.3-SNAPSHOT</version>
         <relativePath>drombler-commons-fx-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>drombler-commons-fx-all</artifactId>
+    <artifactId>drombler-commons-fx</artifactId>
     <packaging>pom</packaging>
 
     <name>Drombler Commons - FX - All</name>
@@ -67,31 +67,15 @@ Contributor(s): .
     <modules>
         <module>drombler-commons-fx-parent</module>
         <module>drombler-commons-fx-core</module>
+        <module>drombler-commons-fx-docking</module>
         <module>drombler-commons-fx-time</module>
         <module>drombler-commons-fx-ensemble</module>
         <module>drombler-commons-fx-sample8</module>
-        <module>drombler-commons-fx-docking</module>
         <module>drombler-commons-fx-samples</module>
   </modules>
     
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-fx-parent</artifactId>
-                <version>${project.version}</version>
-            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-fx-core</artifactId>
