[#36] Make the Docking Framework usable outside Drombler FX  - moving utility classes to Drombler Commons  - clean-up

--- a/drombler-commons-client/drombler-commons-client-core/pom.xml
+++ b/drombler-commons-client/drombler-commons-client-core/pom.xml
@@ -63,4 +63,10 @@ Contributor(s): .
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+    </dependencies>
 </project>
