--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.drombler.commons</groupId>
-        <artifactId>drombler-commons-fx-ensemble-parent</artifactId>
+        <artifactId>drombler-commons-fx-samples-ensemble-parent</artifactId>
         <version>0.3-SNAPSHOT</version>
-        <relativePath>drombler-commons-fx-ensemble-parent/pom.xml</relativePath>
+        <relativePath>drombler-commons-fx-samples-ensemble-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>drombler-commons-fx-ensemble-all</artifactId>
+    <artifactId>drombler-commons-fx-samples-ensemble</artifactId>
     <packaging>pom</packaging>
 
-    <name>Drombler Commons - FX - Ensemble - All</name>
+    <name>Drombler Commons - FX - Samples - Ensemble - All</name>
 
     <scm>
         <connection>${scm.connection}</connection>
@@ -22,7 +22,7 @@
     <distributionManagement>
         <site>
             <id>drombler.sourceforge.net</id>
-            <url>${distributionManagement.fx.ensemble.parent.url}/</url>
+            <url>${distributionManagement.fx.samples.ensemble.parent.url}/</url>
         </site>
     </distributionManagement>
 
@@ -38,9 +38,9 @@
     </prerequisites>
     
     <modules>
-        <module>drombler-commons-fx-ensemble-parent</module>
-        <module>drombler-commons-fx-ensemble-application</module>
-        <!--<module>drombler-commons-fx-ensemble-time</module>-->
+        <module>drombler-commons-fx-samples-ensemble-parent</module>
+        <module>drombler-commons-fx-samples-ensemble-application</module>
+        <!--<module>drombler-commons-fx-samples-ensemble-time</module>-->
     </modules>
     
 </project>
